--- a/sass/_boostrapAlter.scss
+++ b/sass/_boostrapAlter.scss
@@ -9,6 +9,10 @@ $red-color: #f72210;
   margin-bottom: 12px;
 }
 
+.bd {
+  border: 1px solid;
+}
+
 .link-size {
   line-height: 15px;
   font-size: 14px;
@@ -45,6 +49,17 @@ $red-color: #f72210;
   margin-bottom: 12px;
 }
 
+.search-form {
+  border: none;
+  padding-left: 5px;
+  width: 25%;
+}
+
+.nav-top {
+  background-color: #f72210;
+  height: 65px;
+}
+
 @media only screen and (min-width: 768px) {
   .show-border {
     border-right: 1px solid rgb(231, 231, 231);
@@ -60,28 +75,20 @@ $red-color: #f72210;
 
 .search-area {
   text-align: right;
+  margin-left: auto;
 }
 
 .search-area > a {
   text-decoration: none;
 }
 
-.nav-top {
-  background-color: #f72210;
-  padding: 8px;
-}
-
 .nav-logo {
   width: 50%;
   height: 20px;
+  fill: #fff;
 }
 
-.btn-subscribe {
-  font-weight: bold;
-  border-radius: 20px;
-}
-
-.nav-middle .navbar-nav a {
+.nav-middle a {
   color: black !important;
   line-height: 50px;
 }
@@ -101,7 +108,7 @@ $red-color: #f72210;
   }
 
   .datetime {
-    margin-top: 40px;
+    padding-top: 40px;
   }
 
   .search-area {
@@ -115,18 +122,15 @@ $red-color: #f72210;
     margin-right: 20px;
   }
 
+  .nav-top {
+    background-color: #f72210;
+    height: 170px;
+  }
+
   .nav-middle a {
-    font-weight: bold;
     border-right: 1px solid rgb(230, 228, 228);
     font-size: 1rem;
     font-family: 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-
-  .search_icon a {
-    text-decoration: none;
-    color: grey;
-    font-weight: lighter;
-    padding: 3px 2px 0 5px;
   }
 
   .nav-lower a {
@@ -145,5 +149,6 @@ $red-color: #f72210;
     width: 80%;
     height: 100%;
     margin-left: 100px;
+    fill: #fff;
   }
 }
